# openapi-schema

./: .gitignore  .travis.yml  Cargo.toml  README.md
openapi-schema-derive/: Cargo.toml
openapi-schema-derive/src/: lib.rs
src/: de.rs  lib.rs
tests/: enum_with_doc.rs  integration.rs  petstore.rs
