[package]
name = "openapi-schema"
version = "0.1.0"
authors = ["boxdot <d@zerovolt.org>"]
edition = "2018"

[dependencies]
openapi = { git = "https://github.com/boxdot/openapi", rev = "e42474a" }
# serde = { version = "1.0", features = ["derive"] }
openapi-schema-derive = { path = "openapi-schema-derive" }
serde_json = "1.0"
