[package]
name = "openapi-schema"
version = "0.1.0"
authors = ["boxdot <d@zerovolt.org>"]
edition = "2018"

[features]
default = ["chrono"]

[dependencies]
openapi = { git = "https://github.com/softprops/openapi", rev = "c4f4706" }
openapi-schema-derive = { path = "openapi-schema-derive" }
serde_json = "1.0"

chrono = { version = "0.4", features = ["serde"], optional = true }

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
